[package]
name = "incipisphere_renderer"
version = "0.1.0"
license = "MIT"
authors = ["Lucas Kent <rubickent@gmail.com>"]
edition = "2018"

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
winit = "0.17"
genmesh = "0.6"
nalgebra-glm = "0.2"
winit_input_helper = "0.1"
