[package]
name = "incipisphere_renderer"
version = "0.1.0"
license = "MIT"
authors = ["Lucas Kent <rubickent@gmail.com>"]
edition = "2018"

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
winit = "0.18"
genmesh = "0.6"
glm = { version = "0.2", package = "nalgebra-glm" }
winit_input_helper = "0.2"
