[package]
name = "incipisphere_renderer"
version = "0.1.0"
license = "MIT"
authors = ["Lucas Kent <rubickent@gmail.com>"]
edition = "2018"

[dependencies]
vulkano = "0.12"
vulkano-win = "0.12"
vulkano-shaders = "0.12"
winit = "0.19"
genmesh = "0.6"
glm = { version = "0.2", package = "nalgebra-glm" }
winit_input_helper = "0.3"
